fix: preserve evidence provenance and recover accepted interview answers